--- a/api/reward/models/reward.settings.json
+++ b/api/reward/models/reward.settings.json
@@ -22,7 +22,8 @@
     },
     "amount": {
       "type": "integer",
-      "required": true
+      "required": true,
+      "min": 0
     },
     "histories": {
       "via": "reward",
